// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker Anrdoid renders correctly 1`] = `
<DatePicker>
  <View>
    <View />
  </View>
</DatePicker>
`;

exports[`DatePicker Anrdoid renders correctly 2`] = `
<DatePicker
  date={1996-01-01T05:00:00.000Z}
>
  <View>
    <View />
  </View>
</DatePicker>
`;
